<resources>
    <string name="app_name">Notify</string>
    <string name="speak_it">Speak it</string>
    <string name="listview">ListView Example</string>
    <string name="notify_user">Notify User</string>
    <string name="snackbar">SnackBar</string>
    <string name="toast">Toast</string>
    <string name="dialog">Dialog</string>
    <string name="date_picker">Date Picker</string>
    <string name="enter_some_text">Enter Some Text…</string>
</resources>
