<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkish"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/notifyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_patch"
            android:elevation="2sp"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/notify_user"
            android:textColor="@color/darkish"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:padding="5sp">

            <Button
                android:id="@+id/toast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@drawable/background_button_patch"
                android:padding="30sp"
                android:text="@string/toast"
                android:textColor="@color/darkish"
                android:textSize="15sp">
            </Button>

            <Button
                android:id="@+id/snakbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@drawable/background_button_patch"
                android:padding="30sp"
                android:text="@string/snackbar"
                android:textColor="@color/darkish"
                android:textSize="15sp">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">

            <Button
                android:id="@+id/dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@drawable/background_button_patch"
                android:padding="30sp"
                android:text="@string/dialog"
                android:textColor="@color/darkish"
                android:textSize="15sp">
            </Button>

            <Button
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@drawable/background_button_patch"
                android:padding="30sp"
                android:text="@string/date_picker"
                android:textColor="@color/darkish"
                android:textSize="15sp">
            </Button>
        </LinearLayout>



        <EditText
            android:id="@+id/speakText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_button_patch"
            android:hint="@string/enter_some_text"
            android:maxHeight="100sp"
            android:padding="20sp"
            android:textColor="@color/darkish"
            android:textColorHint="@color/darkish"
            android:textSize="15sp">
        </EditText>

        <Button
            android:id="@+id/speakButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_button_patch"
            android:padding="20sp"
            android:text="@string/speak_it"
            android:textColor="@color/darkish"
            android:textSize="15sp">
        </Button>

        <Button
            android:id="@+id/showListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_button_patch"
            android:padding="20sp"
            android:text="@string/listview"
            android:textColor="@color/darkish"
            android:textSize="15sp">
        </Button>

        <Button
            android:id="@+id/broadcast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/background_button_patch"
            android:padding="20sp"
            android:text="Broadcasting Message"
            android:textColor="@color/darkish"
            android:textSize="15sp">
        </Button>


    </LinearLayout>
</ScrollView>